# mantid-idf

./: Cargo.toml  README.md
assets/: test_detector_definition.xml
examples/: filter.rs  id_list.rs  manual_inspection.rs  point_cloud.rs
src/: component_tree.rs  detector_definition.rs  idlists.rs  lib.rs  shapes.rs  structs.rs  types.rs  utils.rs  xml_parser.rs
src/xml_parser/: try_match_attribute.rs  try_match_bytes_start.rs
tests/: load_test_detector_definition.rs
